fixing contact section overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,9 +125,8 @@ form label{
     font-size: 40px;
     text-align: center;
 }
-.contact-icons{
+.bloc-contact{
     width: 100%;
-    color: wheat;
 }
 
 .contact-icons i:hover{
@@ -135,7 +134,7 @@ form label{
 }
 
 .icons i{
-    padding: .25rem 3rem;
+    padding: .25rem 1rem;
     color: white;
 }
 
